# spotPython

./: .coderabbit.yaml  .gitignore  404.html  MANIFEST.in  README.md  RELEASE_NOTES.txt  index.html  makeSpot.sh  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.github/workflows/: test.yml
about/: index.html
docs/: 00_spot_doc.html  01_spot_intro.html  02_spot_multidim.html  03_spot_anisotropic.html  04_spot_sklearn_surrogate.html  05_spot_sklearn_optimization.html  06_spot_gaussian.html  07_spot_ei.html  08_spot_noisy.html  09_spot_ocba.html  10_spot_hpt_sklearn_classification.html  11_spot_hpt_torch_fashion_mnist.html  12_spot_hpt_torch_cifar10.html  13_spot_hpt_river.html  14_spot_ray_hpt_torch_cifar10.html  16_spot_hpt_sklearn_multiclass_classification_randomforest.html  17_spot_hpt_sklearn_multiclass_classification_xgb.html  18_spot_hpt_sklearn_multiclass_classification_svc.html  19_spot_hpt_sklearn_multiclass_classification_knn.html  24_spot_torch_regression.html  25_spot_torch_vbdp.html  30_spot_lightning_csv.html  31_spot_lightning_csv.html  99_spot_doc.html  about.md  bart23e.html  download.md  examples.md  gen_ref_pages.py  hyperparameter-tuning-cookbook.md  index.html  index.md  intro.html  references.html  search.json  summary.html
docs/bart23e/: bart23e.html  search.json
docs/site_libs/bootstrap/: bootstrap.min.css
docs_old/: download.md
download/: index.html
examples/: index.html
gui/: spotGUI.py  spotGUI_0.py  spotGUI_1.py  spotPythonGUI.py  spotRun.py
hyperparameter-tuning-cookbook/: index.html
notebooks/: 00_spotMinimal.ipynb  00_spotPython_tests.ipynb  00_spot_doc.ipynb  01_spot_intro.ipynb  02_spot_multidim.ipynb  03_spot_anisotropic.ipynb  04_spot_sklearn_surrogate.ipynb  05_spot_sklearn_optimizers.ipynb  06_spot_gaussian.ipynb  07_spot_ei.ipynb  08_spot_noisy.ipynb  09_spot_ocba.ipynb  10_spot_hpt_sklearn.ipynb  10_spot_hpt_sklearn_classification.ipynb  11_spot_hpt_torch.ipynb  11_spot_hpt_torch_720.ipynb  11_spot_hpt_torch_fashion_mnist.ipynb  12_spot_hpt_torch_720.ipynb  12_spot_hpt_torch_cifar10.ipynb  13_spot_hpt_torch_cv_fashion_mnist.ipynb  14_spot_ray_hpt_torch_cifar10.ipynb  14_spot_ray_hpt_torch_cifar10_1440.ipynb  14_spot_ray_hpt_torch_cifar10_2880.ipynb  14_spot_ray_hpt_torch_cifar10_360.ipynb  14_spot_ray_hpt_torch_cifar10_720_maans05.ipynb  15_spot_hpt_sklearn_regression.ipynb  16_spot_hpt_sklearn_multiclass_classification.ipynb  16_spot_hpt_sklearn_multiclass_classification_1440.ipynb  16_spot_hpt_sklearn_multiclass_classification_randomforest.ipynb  17_spot_hpt_sklearn_multiclass_classification_xgb.ipynb  18_spot_hpt_sklearn_multiclass_classification_svc.ipynb  19_spot_hpt_sklearn_multiclass_classification_knn.ipynb  20_spot_torch_vbdp.ipynb  20_spot_torch_vbdp_big_09.ipynb  20_spot_torch_vbdp_maans03.ipynb  21_spot_torch_vbdp.ipynb  22_spot_torch_vbdp.ipynb  23_spot_torch_vbdp.ipynb  24_spot_torch_regression.ipynb  24_spot_torch_regression_orig.ipynb  (+31 more)
notebooks/dagstuhl/: evaluation_spot.qmd  spot_sk_matern_michalewicz_10d.ipynb  spot_sk_matern_rosenbrock_6d.ipynb  spot_sk_matern_rosenbrock_6d_30repeats.ipynb
notebooks/data/torch/: model_spot_trained.pt
notebooks/db_dicts/: spotriver_db_dict.json
notebooks/figures/: spotModel.graffle
notebooks/hyperdict/: user_hyper_dict.json
reference/SUMMARY/: index.html
reference/spotPython/_version/: index.html
reference/spotPython/data/: index.html
remote/: client.py
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/about/: index.html
site/download/: index.html
site/examples/: index.html
site/reference/SUMMARY/: index.html
site/search/: search_index.json
src/pyspot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/spotPython/: __init__.py
src/spotPython.egg-info/: PKG-INFO  SOURCES.txt
src/spotPython/budget/: ocba.py
src/spotPython/data/: __init__.py  base.py  california.py  california_housing.py  csvdataset.py  data.csv  data.pkl  diabetes.py  friedman.py  light_hyper_dict.json  light_hyper_dict.py  lightcrossvalidationdatamodule.py  lightdatamodule.py  lightning2_hyper_dict.json  lightning2_hyper_dict.py  lightning_hyper_dict.json  lightning_hyper_dict.py  pkldataset.py  sklearn_hyper_dict.json  sklearn_hyper_dict.py  torch_hyper_dict.json  torch_hyper_dict.py  torchdata.py  vbdp.py
src/spotPython/design/: designs.py  factorial.py  spacefilling.py
src/spotPython/fun/: hyperlight.py  hyperlightning.py  hyperlightning2.py  hypersklearn.py  hypertorch.py  (+1 more)
src/spotpython/: effects.py
test/: test_ackley.py  test_add_core_model_to_fun_control.py  test_aggregate_mean_var.py  test_apply_penaly_NA.py  test_assign_values.py  test_bestlh.py  test_branin.py  test_build_Psi.py  test_build_Psi_matrix.py  test_build_U.py  test_build_psi_vec.py  test_build_psi_vector.py  test_calculate_split.py  test_california_housing.py  test_check_X_shape.py  test_check_identical_columns_and_rows.py  test_chg.py  test_compare2sklearn.py  test_convert_keys.py  test_csv_dataset.py  test_csvdataset.py  test_design_utils.py  test_desirability.py  test_effects.py  test_evaluate_design_matrix.py  test_evaluate_new_X.py  test_evaluate_new_solutions.py  test_extract_from_bounds.py  test_extract_linear_dims.py  test_fcn.py  test_file_save_load.py  test_fit_full.py  test_fit_kriging.py  test_fit_n.py  test_fit_surrogate.py  test_forr08a.py  test_fullfactorial.py  test_fun_control_init.py  test_fun_wingwt.py  test_generate_design.py  (+194 more)
(+503 files in other folders)
