[build-system]
requires = [
  "setuptools>=61.0",
  "setuptools_scm[toml]"
]
build-backend = "setuptools.build_meta"

[project]
name = "spotpython"
version = "0.14.54"
authors = [
  { name="T. Bartz-Beielstein", email="tbb@bartzundbartz.de" }
]
description = "spotpython - Sequential Parameter Optimization in Python"
readme = "README.md"
license = { text="AGPL-3.0-or-later" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: OS Independent",
]
# PEP 621 dependencies declaration
# adapt to your dependencies manager
dependencies = [
  "captum",
  "lightning>=2.0.0rc0",
  "graphviz",
  "matplotlib",
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings-python",
  "mkdocs-exclude",
  "mkdocs-gen-files",
  "mkdocs-literate-nav",
  "mkdocs-section-index",
  "numpy",
  "nbformat",
  "pandas",
  "plotly",
  "python-markdown-math",
  "pytorch-lightning>=1.4",
  "river>=0.21.0",
  "scikit-learn",
  "scipy",
  "spotriver>=0.3.7",
  "seaborn",
  "tabulate",
  "tensorboard",
  "torch",
  "torch-tb-profiler",
  "torchmetrics",
  "torchvision"
]
# dynamic = ["version"]

[project.urls]
"Homepage" = "https://www.spotseven.de"
Issues = "https://github.com/sequential-parameter-optimization/spotpython/issues"
Repository = "https://github.com/sequential-parameter-optimization/spotpython"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

