[build-system]
requires = [
  "setuptools>=61.0",
  "setuptools_scm[toml]"
]
build-backend = "setuptools.build_meta"

[project]
name = "spotpython"
version = "0.29.12"
authors = [
  { name="T. Bartz-Beielstein", email="tbb@bartzundbartz.de" }
]
description = "spotpython - Sequential Parameter Optimization in Python"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
# PEP 621 dependencies declaration
dependencies = [
  "build",
  "captum",
  "factor_analyzer",
  "forestci",
  "graphviz",
  "lightning>=2.0.0rc0",
  "mapie",
  "matplotlib",
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.33",
  "mkdocstrings-python>=1.10.8",
  "mkdocs-exclude>=1.0.2",
  "mkdocs-gen-files>=0.5.0",
  "mkdocs-literate-nav>=0.6.1",
  "mkdocs-section-index>=0.3.9",
  "numpy>=2.0.0",
  "nbformat",
  "pandas",
  "plotly",
  "PyQt6",
  "python-markdown-math",
  "pytorch-lightning>=1.4",
  "river>=0.22.0",
  "scikit-learn",
  "scipy",
  "spotriver>=0.4.1",
  "seaborn",
  "statsmodels",
  "tabulate",
  "tensorboard",
  "torch",
  "torchdiffeq",
  "torch-tb-profiler",
  "torchmetrics",
  "torchvision",
  "torchviz",
]
# dynamic = ["version"]

[project.urls]
"Homepage" = "https://www.spotseven.de"
Issues = "https://github.com/sequential-parameter-optimization/spotpython/issues"
Repository = "https://github.com/sequential-parameter-optimization/spotpython"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.black]
line-length = 200
target-version = ["py312"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

